@@ -1,5 +1,6 @@
 2008-10-06  Michael Snyder  <msnyder@vmware.com>
 
+	* infrun.c (handle_inferior_event, step_into_function): Formatting.
         * infrun.c (handle_inferior_event): Formatting, spelling fix.
 
 	* infrun.c (handle_inferior_event): Add special case for
